updated Google Analtyics ID to main version

--- a/web/tmpl/footer.tmpl
+++ b/web/tmpl/footer.tmpl
@@ -26,7 +26,8 @@ $(document).ready(function(){
 	else {$('#logout').show(0);}
 });
 
-var pageTracker = _gat._getTracker("UA-3802985-2");
+//var pageTracker = _gat._getTracker("UA-3802985-2");
+var pageTracker = _gat._getTracker("UA-3802985-1");
 pageTracker._initData();
 pageTracker._trackPageview();
 </script>
