updated path for cookies to be global for server

--- a/web/tmpl/index.tmpl
+++ b/web/tmpl/index.tmpl
@@ -17,7 +17,7 @@ function place_cookie(valid, cookie, url)
   }
 
 function delete_cookie()  {
-      $.cookie('CoGe','',{path: '/CoGe', expires: -1});
+      $.cookie('CoGe','',{path: '/', expires: -1});
   }
 
 $(document).ready(function(){
