changed links to relative path for sign-out

--- a/web/tmpl/footer.tmpl
+++ b/web/tmpl/footer.tmpl
@@ -2,7 +2,7 @@
 <HR>
 <DIV>
 <TMPL_IF NAME=LOGON>
-	<span class=small>Currently logged in as, <TMPL_VAR NAME=USER>  <a href="/CoGe/index.pl?logout=1" class="small">Sign-out</a></span>
+	<span class=small>Currently logged in as, <TMPL_VAR NAME=USER>  <a href="index.pl?logout=1" class="small">Sign-out</a></span>
 	<TMPL_ELSE>
 	 <a href="javascript:void(0)" onClick=sign_in() class="small">Sign-in</a>
 	</TMPL_IF>
