update link for Home

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -191,7 +191,7 @@ $(document).ready( function() {
   <div style="float:right"><!-- open A -->
     <div style="float:right;margin-right: 73px;">
 	<ul class="sf-menu" >
-	 <li><a id=home href="" target="_self">Home</a></li>
+	 <li><a id=home href="index.pl" target="_self">Home</a></li>
 	 <li><a href='javascript:void(0)'>Applications</a>
 	  <ul>
 	  <li><a href="OrganismView.pl" target="_self">OrganismView</a></li>
