changed position of TITLE

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -239,7 +239,7 @@ $(document).ready( function() {
 </TMPL_UNLESS>
 
 <div><TMPL_IF NAME=LOGO_PNG><img style="vertical-align: bottom;" onclick="window.open('<TMPL_VAR NAME=HELP>')" src='picts/<TMPL_VAR NAME=LOGO_PNG>' border=0></TMPL_IF>
-      <span style="vertical-align: bottom; font-size: 1.5em")><TMPL_VAR NAME=TITLE></span>
+      <span style="vertical-align: 50%; font-size: 1.5em")><TMPL_VAR NAME=TITLE></span>
 </div>
       <TMPL_IF NAME=DEV><br><span class=alert>WARNING: THIS IS A DEVELOPMENT SERVER</span><br>Software may not work, system may be down, etc.<br>Please use <a href="http://genomevolution.org/CoGe"> our production server: genomevolution.org/CoGe</a></TMPL_IF>
  
