added a div for system alert notifications

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -242,6 +242,7 @@ $(document).ready( function() {
       <span style="vertical-align: 50%; font-size: 1.5em")><TMPL_VAR NAME=TITLE></span>
 </div>
       <TMPL_IF NAME=DEV><br><span class=alert>WARNING: THIS IS A DEVELOPMENT SERVER</span><br>Software may not work, system may be down, etc.<br>Please use <a href="http://genomevolution.org/CoGe"> our production server: genomevolution.org/CoGe</a></TMPL_IF>
+<div class=alert></div>
  
 <noscript>
 Welcome to CoGe -- a new system for a new kind of comparative genomics.  CoGe is designed for easily visualizing, comparing, and understanding the evolution, struture and dynamics of genomes.
