--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -1029,9 +1029,10 @@ $(function() {
 	     $(".org_search_name")
 	     .focus(function() {
 	     		     //Clear search bar if 'Search' is in it or is empty (if someone refreshes)
-	     		     if( $(this).val() == 'Search' ||  $(this).val() == ''){ $(this).css({fontStyle: "normal"});
+	     		     if( $(this).val() == 'Search' ||  $(this).val() == ''){ 
 			      $(this).val('');
 			      }
+			     $(this).css({fontStyle: "normal"});
 			     org_search();
 			   })
 	    .keyup(function() {
@@ -1040,9 +1041,10 @@ $(function() {
 	     $(".org_search_desc")
 	     .focus(function() {
 	     		     //Clear search bar if 'Search' is in it or is empty (if someone refreshes)
-	     		     if( $(this).val() == 'Search' ||  $(this).val() == ''){ $(this).css({fontStyle: "normal"});
+	     		     if( $(this).val() == 'Search' ||  $(this).val() == ''){ 
 			      $(this).val('');
 			      }
+ 			     $(this).css({fontStyle: "normal"});
 			     org_search(1);
 			   })
 	    .keyup(function() {
