--- a/web/tmpl/MotifView.tmpl
+++ b/web/tmpl/MotifView.tmpl
@@ -747,7 +747,7 @@ function update_line_width(val)
 </tr>
 </table>
 </div>
-<span id=go style="font-size: 1em" class='ui-button ui-corner-all' onClick="set_display_order(); loading([],['results']); initialize_basefile(['args__prog','args__GEvo', 'args__return_name','args__1'],[populate_page_obj]);get_selected_motifs(); go_run(); ">Find Motifs!</span>
+<span id=go style="font-size: 1em" class='ui-button ui-corner-all' onClick="set_display_order(); loading([],['results']); initialize_basefile(['args__prog','args__GEvo', 'args__return_name','args__1'],[populate_page_obj]);get_selected_motifs(); go_run(); reload();">Find Motifs!</span>
 
 <span id=go style="font-size: 1em" class='ui-button ui-corner-all' onClick="location.reload();">Purge Results</span>
 <table>
@@ -828,7 +828,7 @@ Select TFBS Motif:
 <span class='ui-button ui-corner-all ui-button-icon-left ' onClick="remove_seq()"><span class="ui-icon ui-icon-minus"></span>Remove</span>
  --> 
 
-<span class="small">Merge Previous GEvo Analysis (paste in URL): <input class="backbox" name=previous_url id=previous_url type="textbox" size=20 value=<TMPL_VAR NAME ="PANEL_URL">></span>
+<span class="small">Merge Previous GEvo Analysis (paste in URL): <input name=previous_url id=previous_url type="textbox" size=20 value=<TMPL_VAR NAME ="PANEL_URL">></span>
   <span class='ui-button ui-corner-all ui-button-icon-left ' 
   onClick="merge_previous(['previous_url','num_seqs'],[process_add_seq]); gen_hsp_colors(['args__num_seqs','num_seqs'],[add_hsp_colors]);"><span class="ui-icon ui-icon-plus"></span>Merge</span>
  <br>
