added new ks color schemes

--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -609,6 +609,8 @@ function post_to_grimm(seq1, seq2)
      <select name="color_scheme" id = "color_scheme">
       <option value = 0 <TMPL_VAR NAME=CS0> >Rainbow 1</option>
       <option value = 1 <TMPL_VAR NAME=CS1> >Rainbow 2</option>
+      <option value = 5 <TMPL_VAR NAME=CS5> >2xRainbow</option>
+      <option value = 6 <TMPL_VAR NAME=CS6> >3xRainbow</option>
       <option value = 2 <TMPL_VAR NAME=CS2> >RYB</option>
       <option value = 3 <TMPL_VAR NAME=CS3> >RYBG</option>
       <option value = 4 <TMPL_VAR NAME=CS4> >Black-Red</option>
