added HTML template var for FID_anno

--- a/web/tmpl/FeatView.tmpl
+++ b/web/tmpl/FeatView.tmpl
@@ -334,7 +334,7 @@ function search_bar(div_id){
  </tbody>
 </TABLE>
 
-<DIV id="anno" class="ui-widget-content ui-corner-all"></DIV>
+<DIV id="anno" class="ui-widget-content ui-corner-all"><TMPL_VAR NAME="FID_ANNO"></DIV>
 
 
 <div class="dialog" title="Feature List" id="feat_list">
