added logo for iplant

--- a/web/tmpl/index.tmpl
+++ b/web/tmpl/index.tmpl
@@ -172,7 +172,8 @@ Number returned: <input id=limit class=backbox type=textbox size=3 value=20><spa
 <div style="text-align: center">
  <hr>
  <a href="http://www.nsf.gov" target= "_new"><img src="./picts/nsf-logo.gif" border=0 width = 100px></a>
- <img src="./picts/uc_seal.gif" border=0 width=100px>
+ <img src="./picts/uc_seal.gif" border=0 width=100px><br>
+ <a href="http://iplantcollaborative.org" target="_new"><img src="./picts/IPL_logo_1C_small.gif" border = 0 height = 70px></a> 
 </div>
 </div>
 <div style="float:left; width:50px">&nbsp</div>
