added link to Latest News

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -232,6 +232,7 @@ $(document).ready( function() {
 	      <li><a href="/wiki/index.php/Tutorials" target="_blank">Tutorials</a></li>
 	      <li><a href="/wiki/index.php/Contact_Page" target="_blank">Contact or Cite Us</a></li>
 	      <li><a href="/wiki/index.php/System_Support" target="_blank">System Support</a></li>
+              <li><a href="wiki/index.php/CoGepedia:Current_events" target="_blank">Latest News</a><li>
 	</ul>
 	</li>
 	</ul>
