fixed formatting bug

--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -680,7 +680,8 @@ function post_to_grimm(seq1, seq2)
    <br>
    <span class=small style="color:red">&nbsp;&nbsp;&nbsp;&nbsp;Synonymous rates will supercede this option.</span> 
  <tr>
-  <td colspan=2>Dotplot axis metric:
+  <td>Dotplot axis metric:
+  <td>
   <select name="axis_metric" id = "axis_metric">
    <option value = "nt" <TMPL_VAR NAME=AXIS_METRIC_NT>>Nucleotides</option>
    <option value = "gene" <TMPL_VAR NAME=AXIS_METRIC_GENE>>Genes</option>
