--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -45,18 +45,27 @@ function get_dataset_group_info_chain(i)
 	
 
 function run_synmap(){
-if(!pageObj.basename) 
+ generate_basefile([],[update_basename]);   
+ if(!pageObj.basename) 
   {
   	setTimeout("run_synmap()", 100);
   	return;
   }
-	$('#results').hide(0);  	
-  	$('#log_text').show(0);
 
-  pageObj.nolog=1;
-  setTimeout("monitor_log()", 5000);
-  
-go(['args__c','c','args__D','D','args__g','g','args__A','A','args__gm','gm','args__Dm','Dm','args__blast','blast', 'args__feat_type1','feat_type1', 'args__feat_type2','feat_type2','args__dsgid1','dsgid1', 'args__dsgid2','dsgid2','args__jobtitle','jobtitle','args__basename','args__'+pageObj.basename,'args__email','email','args__regen_images','args__'+$('#regen_images')[0].checked, 'args__width', 'args__'+$('#master_width').val(), 'args__dagchainer_type','args__'+$('#dagchainer_type')[0].checked, 'args__ks_type','ks_type', 'args__assemble','args__'+$('#assemble')[0].checked, 'args__axis_metric','axis_metric', 'args__min_chr_size', 'min_chr_size', 'args__show_non_syn','args__'+$('#show_non_syn')[0].checked, 'args__color_type','color_type', 'args__box_diags', 'args__'+$('#box_diags')[0].checked, 'args__merge_algo','merge_algo', 'args__depth_algo', 'depth_algo', 'args__depth_org_1_ratio', 'depth_org_1_ratio', 'args__depth_org_2_ratio', 'depth_org_2_ratio', 'args__depth_overlap', 'depth_overlap', 'args__fid1','args__'+pageObj.fid1, 'args__fid2','args__'+pageObj.fid2, 'args__show_non_syn_dots','args__'+$('#show_non_syn_dots')[0].checked,'args__flip','args__'+$('#flip')[0].checked,'args__clabel','args__'+$('#clabel')[0].checked,'args__color_scheme','color_scheme', 'args__chr_sort_order','chr_sort_order'],[handle_results] );
+ if ($('#blast').val() == 5 && ($('#feat_type1').val() != 1 || $('#feat_type2').val() != 1) )
+  {
+   alert('BlastP only works if both genomes have protein coding sequences (CDS) AND CDS is selected for both!');
+  }
+ else
+  {
+   jQuery('html, body').animate({scrollTop: 0}, 2000); 
+   reset_basename();
+   $('#results').hide(0);  	
+   $('#log_text').show(0);
+   pageObj.nolog=1;
+   setTimeout("monitor_log()", 5000);
+   go(['args__c','c','args__D','D','args__g','g','args__A','A','args__gm','gm','args__Dm','Dm','args__blast','blast', 'args__feat_type1','feat_type1', 'args__feat_type2','feat_type2','args__dsgid1','dsgid1', 'args__dsgid2','dsgid2','args__jobtitle','jobtitle','args__basename','args__'+pageObj.basename,'args__email','email','args__regen_images','args__'+$('#regen_images')[0].checked, 'args__width', 'args__'+$('#master_width').val(), 'args__dagchainer_type','args__'+$('#dagchainer_type')[0].checked, 'args__ks_type','ks_type', 'args__assemble','args__'+$('#assemble')[0].checked, 'args__axis_metric','axis_metric', 'args__min_chr_size', 'min_chr_size', 'args__show_non_syn','args__'+$('#show_non_syn')[0].checked, 'args__color_type','color_type', 'args__box_diags', 'args__'+$('#box_diags')[0].checked, 'args__merge_algo','merge_algo', 'args__depth_algo', 'depth_algo', 'args__depth_org_1_ratio', 'depth_org_1_ratio', 'args__depth_org_2_ratio', 'depth_org_2_ratio', 'args__depth_overlap', 'depth_overlap', 'args__fid1','args__'+pageObj.fid1, 'args__fid2','args__'+pageObj.fid2, 'args__show_non_syn_dots','args__'+$('#show_non_syn_dots')[0].checked,'args__flip','args__'+$('#flip')[0].checked,'args__clabel','args__'+$('#clabel')[0].checked,'args__color_scheme','color_scheme', 'args__chr_sort_order','chr_sort_order'],[handle_results] );
+ }
 }
 
 function handle_results(val){
@@ -105,7 +114,7 @@ function update_params(val) {
  get_dataset_group_info(['args__dsgid','dsgid2','args__org_num','args__2'],['dsg_info2', 'feattype_menu2','genome_message2']);
  ajax_wait(cmd);
  var type;
- $('#blast option:eq('+params[9]+')').attr('selected','selected');
+ $('#blast').attr('value',params[9]);
  if (params[10] == 'Distance') 
   {
    $("input[name='dagchainer_type']:nth(1)").attr("checked","checked");
@@ -518,7 +527,7 @@ function post_to_grimm(seq1, seq2)
 </table>
 
 
-<span style="font-size: 1em" class="ui-button ui-button-go ui-corner-all" id="synmap_go" onClick="jQuery('html, body').animate({scrollTop: 0}, 2000); reset_basename();generate_basefile([],[update_basename]);run_synmap();" >Generate SynMap</span>
+<span style="font-size: 1em" class="ui-button ui-button-go ui-corner-all" id="synmap_go" onClick="run_synmap();" >Generate SynMap</span>
 
 <span style="font-size: 0.8em" class='ui-button ui-corner-all' onClick="$('#results').html('');" >Clear Results</span>
 
@@ -545,11 +554,12 @@ function post_to_grimm(seq1, seq2)
  <tr>
    <td style="color:#009900">Blast Algorithm:
    <td><select id="blast" name="blast">
+	<OPTION VALUE="4" <TMPL_VAR NAME="LASTZ_SELECT">>(B)lastZ (fast)
         <OPTION VALUE="0" <TMPL_VAR NAME="MEGA_SELECT">>MegaBlast
         <OPTION VALUE="1" <TMPL_VAR NAME="DCMEGA_SELECT">>Discontinuous MegaBlast
-        <OPTION VALUE="2" <TMPL_VAR NAME="BLASTN_SELECT">>BlastN
-        <OPTION VALUE="3" <TMPL_VAR NAME="TBLASTX_SELECT">>TBlastX
-	<OPTION VALUE="4" <TMPL_VAR NAME="LASTZ_SELECT">>(B)lastZ
+        <OPTION VALUE="2" <TMPL_VAR NAME="BLASTN_SELECT">>BlastN (slow)
+        <OPTION VALUE="3" <TMPL_VAR NAME="TBLASTX_SELECT">>TBlastX (very slow)
+	<OPTION VALUE="5" <TMPL_VAR NAME="BLASTP_SELECT">>BlastP (slow)
        </select>
  <tr>
    <td style="color:#009900">Filter Repetitive Matches:
